# c--ad

./: '  .gitignore  BOOT.md  CMakeLists.txt  COPYING  README.md  TODO.md  test.cpp  test_ranges.cpp
.github/workflows/: cmake-single-platform.yml
experiments/: CMakeLists.txt
experiments/cxx_parallel/: CMakeLists.txt  main.cpp
include/: compounds.hpp  dimensions.hpp  disjoint_intervals.hpp  expressions.hpp  expressions.v1.2.hpp  expressions.v1.hpp  forward_declarations.hpp  geometry.hpp  geometry_1.3.hpp  index_sequence_utility.hpp  jacobian.hpp  log.hpp  matrix.hpp  normalize.hpp  specification.hpp  substitution.hpp  tensor.hpp  tensor.v1.2.hpp  tensors.hpp  testing.hpp  units.hpp  universe.hpp  utility.hpp  visitation.hpp
include/expressions/: compound_units.hpp  derivations.hpp  deviations.hpp  expression_base.hpp  expression_ops.hpp  expressions.hpp  format.hpp  normalize.hpp  scope.hpp  solvers.hpp  tensor_contraction.hpp  tensor_field.hpp  tensor_field_ops.hpp  units.hpp
include/extensions/: tensors.hpp
include/formats/: output.hpp  stl.hpp
include/geometry/: attribute.hpp  boundary.hpp  collection.hpp  compound.hpp  extrude.hpp  extrusion.hpp  linear_transform.hpp  orient.hpp  parameter.hpp  processors.hpp  project.hpp  rotate_plane.hpp  simplex.hpp  space.hpp  subdivide.hpp  translate.hpp
include/geometry/primitives/: box.hpp  cylinder.hpp
lib/: CMakeLists.txt  geometry.cppm  geometry3d.cppm  iso_surface.cppm  linalg.cppm  marching_tetra.cppm  utilities.cppm  volume.cppm
test/: CMakeLists.txt  README.md  test_constraint_playground.cpp  test_constraint_playground2.cpp  test_derivations.cpp  test_disjoint_intervals.cpp  test_expressions.cpp  test_expressions2.cpp  test_expressions3.cpp  test_geometry.cpp  test_geometry.v1.2.cpp  test_geometry2.cpp  test_geometry_v1.3.cpp  test_iso_surface.cpp  test_jacobian.cpp  test_matrix.cpp  test_memory.cpp  test_normalize.cpp  test_pack_distribute.cpp  test_tensor.cpp  test_tensors.cpp  test_units.cpp  test_units2.cpp  test_units3.cpp  test_vcg.cpp
